# SaxTune

./: .gitignore  LICENSE  README.md  com.felix.saxtune.yml  io.github.felixsystem96.SaxTune.yml  main.py  meson.build  run.sh
data/: com.felix.saxtune.desktop.in  com.felix.saxtune.metainfo.xml  io.github.felixsystem96.SaxTune.desktop.in  io.github.felixsystem96.SaxTune.metainfo.xml  meson.build
player/: config.py  mpris.py  ui.py
po/: POTFILES  es.po  meson.build
po/locale/es/LC_MESSAGES/: saxtune.mo
src/: meson.build  saxtune.in
src/saxtune/: audio.py  config.py  main.py  ui.py
